# tinyscreenshot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
experiments/: README.md  run_matrix.py
scripts/: install.sh
src/tinyscreenshot/: __init__.py  __main__.py  _macos_compat.py  capture.py  cli.py  process.py  report.py  runner.py  skill_install.py  tokens.py
src/tinyscreenshot/platform_capture/: __init__.py  _base.py  _linux.py  _mac.py
src/tinyscreenshot/skill/: SKILL.md
tests/: test_cli.py  test_macos_compat.py  test_process.py  test_skill_install.py  test_tokens.py
