[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tinyscreenshot"
version = "0.1.2"
description = "Token-saving screenshots for Claude Code. Drop-in Claude skill + CLI: a default capture is ~540 vision tokens instead of ~2100, no information lost. Also works with GPT/Gemini."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Franz Enzenhofer" }]
keywords = ["screenshot", "ai", "claude", "llm", "vision", "tokens", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Utilities",
]
dependencies = [
    "mss>=9.0.1",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
tinyscreenshot = "tinyscreenshot.cli:main"
tshot = "tinyscreenshot.cli:main"

[project.urls]
Homepage = "https://github.com/franzenzenhofer/tinyscreenshot"
Repository = "https://github.com/franzenzenhofer/tinyscreenshot"
Issues = "https://github.com/franzenzenhofer/tinyscreenshot/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tinyscreenshot"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
